# Netopeer-GUI

./: .gitignore  .gitmodules  README.md  Vagrantfile  bower.json  composer.json  composer.phar  gulpfile.js  index.html  install-no-composer.sh
app/: AppKernel.php  autoload.php  bootstrap.php.cache
app/config/: config.yml  config_dev.yml  config_test.yml  parameters.ini  parameters.yml  parameters.yml.dist  routing.yml  routing_dev.yml  security.yml
css/: config.rb  styles.css
css/sass/: screen.scss
css/stylesheets/: screen.css
data/: get.xml
install/: .gitignore  Makefile.am  Vagrantfile  configure.ac  netopeergui.conf.in
install/centos6/: install.sh
install/centos7/: install.sh
install/pyang/: Makefile.am  nmp.py  wyin.py
install/ubuntu/: Vagrantfile
js/: JSONedit.js  directives2.js
js/directives/: addItem.js  switchItem.js
js/services/: ajaxService.js
public/: templates.js
src/FIT/Bundle/ModuleDefaultBundle/: FITModuleDefaultBundle.php
src/FIT/Bundle/ModuleDefaultBundle/Controller/: ModuleController.php
src/FIT/Bundle/ModuleDefaultBundle/DependencyInjection/: Configuration.php
src/FIT/Bundle/ModuleNacmBundle/: FITModuleNacmBundle.php
src/FIT/Bundle/ModuleNacmBundle/Controller/: ModuleController.php
src/FIT/Bundle/ModuleNacmBundle/DependencyInjection/: Configuration.php  FITModuleDefaultExtension.php  FITModuleNacmExtension.php
src/FIT/Bundle/ModuleXmlBundle/: FITModuleXmlBundle.php
src/FIT/Bundle/ModuleXmlBundle/Controller/: ModuleController.php
src/FIT/Bundle/ModuleXmlBundle/DependencyInjection/: Configuration.php  FITModuleXmlExtension.php
src/FIT/NetopeerBundle/: FITNetopeerBundle.php
src/FIT/NetopeerBundle/Command/: ProjectInitCommand.php  UserCommand.php
src/FIT/NetopeerBundle/Controller/: .DefaultController.php.swp  AjaxController.php  BaseController.php  DefaultController.php  GenerateController.php  ModuleController.php  ModuleControllerInterface.php  RegistrationController.php  SecurityController.php  tmp.js
src/FIT/NetopeerBundle/Data/: test.xml  test2.xml
src/FIT/NetopeerBundle/DependencyInjection/: Configuration.php  FITNetopeerExtension.php
src/FIT/NetopeerBundle/Entity/: BaseConnection.php  ConnectionSession.php  CustomUserClass.php  ModuleController.php  ModuleControllerRepository.php  MyConnection.php  SamlUser.php  User.php  UserCustomData.php  UserSettings.php
src/FIT/NetopeerBundle/EventListener/: ModuleListener.php
src/FIT/NetopeerBundle/Form/: UserType.php
src/FIT/NetopeerBundle/Handler/: AuthenticationHandler.php
src/FIT/NetopeerBundle/Models/: .Data.php.swo  AjaxSharedData.php  Array2XML.php  ConnectionSession.php  Data.php  MergeXML.php  SamlToState.php  XMLoperations.php
src/FIT/NetopeerBundle/Resources/config/: functionality.yml  routing.yml  services.yml
src/FIT/NetopeerBundle/Resources/public/: .gitignore  config.rb
src/FIT/NetopeerBundle/Resources/saml/: ._openidp.metadata.xml  openidp.metadata.xml  server.key  server.pem
src/FIT/NetopeerBundle/Resources/views/: layout.html.twig
src/FIT/NetopeerBundle/Services/Functionality/: ConnectionFunctionality.php  NetconfFunctionality.php
src/FIT/NetopeerBundle/Services/Managers/: SamlToState.php
src/FIT/NetopeerBundle/Symfony/: MySession.php
src/FIT/NetopeerBundle/Tests/: ConfigureDeviceTestCase.php  DefaultTestCase.php  DeviceConnectionTestCase.php  LoginTestCase.php  codeception.yml  phpunit.xml
src/FIT/NetopeerBundle/Tests/Codeception/: _bootstrap.php  acceptance.suite.yml  functional.suite.yml
src/FIT/NetopeerBundle/Tests/Controller/: DefaultControllerTest.php
src/FIT/NetopeerBundle/Tests/Models/: XMLoperationsTest.php
src/FIT/NetopeerBundle/Tests/Selenium/: ConfigureDeviceTestCase.php  DefaultTestCase.php  DeviceConnectionTestCase.php  LoginTestCase.php  phpunit.xml
src/FIT/NetopeerBundle/Twig/: NetopeerTwigExtension.php
src/winzou/CacheBundle/: CacheFactory.php  README.md  composer.json  winzouCacheBundle.php
src/winzou/CacheBundle/Cache/: AbstractCache.php  ApcCache.php  ArrayCache.php  CacheInterface.php  FileCache.php  LifetimeFileCache.php  MemcacheCache.php  XcacheCache.php  ZendDataCache.php
src/winzou/CacheBundle/DependencyInjection/: Configuration.php  winzouCacheExtension.php
src/winzou/CacheBundle/Resources/config/: services.yml
src/winzou/CacheBundle/Resources/meta/: LICENCE
templates/directives/: addItem.html  switchItem.html
templates/types/: array.html  object.html
web/: .htaccess  app.php  app_dev.php
web/bundles/: fitnetopeer  framework  netopeer  sensiodistribution
web/bundles/fitnetopeer/js/: default.js  notifications.js
web/bundles/netopeer/docu/: index.html
web/bundles/netopeer/docu/classes/: Codeception.Module.CodeHelper.html  Codeception.Module.TestHelper.html  Codeception.Module.WebHelper.html  ConfigureDeviceTestCase.html  CreateFormCest.html  DatastoreConfigureCest.html  DefaultTestCase.html  DeviceConnectionTestCase.html  FIT.Bundle.ModuleDefaultBundle.Controller.ModuleController.html  FIT.Bundle.ModuleDefaultBundle.DependencyInjection.Configuration.html  FIT.Bundle.ModuleDefaultBundle.DependencyInjection.FITModuleDefaultExtension.html  FIT.Bundle.ModuleDefaultBundle.FITModuleDefaultBundle.html  FIT.Bundle.ModuleXmlBundle.Controller.ModuleController.html  FIT.Bundle.ModuleXmlBundle.DependencyInjection.Configuration.html  FIT.Bundle.ModuleXmlBundle.DependencyInjection.FITModuleXmlExtension.html  FIT.Bundle.ModuleXmlBundle.FITModuleXmlBundle.html  FIT.NetopeerBundle.Command.ProjectInitCommand.html  FIT.NetopeerBundle.Command.UserCommand.html  FIT.NetopeerBundle.Controller.AjaxController.html  FIT.NetopeerBundle.Controller.BaseController.html  FIT.NetopeerBundle.Controller.DefaultController.html  FIT.NetopeerBundle.Controller.GenerateController.html  FIT.NetopeerBundle.Controller.ModuleController.html  FIT.NetopeerBundle.Controller.ModuleControllerInterface.html  FIT.NetopeerBundle.Controller.SecurityController.html  FIT.NetopeerBundle.DependencyInjection.Configuration.html  FIT.NetopeerBundle.Entity.User.html  (+28 more)
web/css/: stylesheet.css
web/js/compiled/: default.js
(+377 files in other folders)
